add: remove relative api
