# docs/openapi.yml
@@ -462,6 +462,21 @@ paths:
       responses:
         '200':
           description: ok
+  /pariwar/{pariwarId}/nimta/{nimtaId}/removeRelative/{id}:
+    parameters:
+      - $ref: '#/components/parameters/PariwarId'
+      - $ref: '#/components/parameters/NimtaId'
+      - $ref: '#/components/parameters/ResourceId'
+    delete:
+      security:
+        - JWT: [ ]
+      tags:
+        - Nimta
+      operationId: removeRelative
+      summary: to remove relative in nimta
+      responses:
+        '200':
+          description: ok
   /pariwar/{pariwarId}/relative:
     parameters:
       - $ref: '#/components/parameters/PariwarId'
@@ -585,6 +600,14 @@ components:
       description: id of pariwar to be worked on 
       in: path 
       name: 'pariwarId'
+      schema:
+        type: string
+        example: adasdas-dwqd3-fcsd-dwedd
+    NimtaId:
+      required: true
+      description: id of nimta to be worked on 
+      in: path 
+      name: 'nimtaId'
       schema:
         type: string
         example: adasdas-dwqd3-fcsd-dwedd
